See the end for copying conditions.

NB: "RCS: X..Y " means that the particular release includes
    changes in the RCS repo, revision 1.X through 1.Y (inclusive).

Hint: (highlight-phrase "[0-9][.][0-9][.][0-9]+\\|[0-9]+[.][.][0-9]+"
                        'hi-red-b)


- next | NOT YET RELEASED
  - bugfixes
    - don't special-case property value type ‘none’
    - handle subtrees on write
  - new keybinding for ‘gnugo-undo-one-move’: M-u
  - ‘gnugo-undo-one-move’ can optionally switch colors
  - ‘gnugo-move-history’ returns last two moves w/ RSEL ‘two’
  - performance improvements

- 2.3.1 | 2014-02-27
  - portability fixes

- 2.3.0 | 2014-02-24
  - now part of ELPA, tweaked for GNU Emacs 24.x
    - dropped support for XEmacs and older Emacs
    - use ‘user-error’ for user errors
  - bugfixes
    - handle sudden jump in captured stones correctly
    - rename hook-communication var w/ "gnugo-" prefix
    - (w/ images) grid top/bottom row spacing
  - on SGF save/load indicate buffer not modified
  - documentation improvements
    - version numbering scheme documented: MAJOR.MINOR.PATCH
    - keybinding constructs for ‘gnugo’ and ‘gnugo-board-mode’
  - message for worm/dragon animation avoids underscore
  - new commands
    - ‘A’ (gnugo-switch-to-another)
    - ‘_’ and ‘M-_’ (gnugo-boss-is-near) -- was ‘bury-buffer’
  - new keybinding for ‘gnugo-undo-two-moves’: DEL

- 2.2.14 | 2008-03-03
  - start error message w/ a capital letter
  - use ‘(error "%s" X)’ instead of ‘(error X)’
  - improve ‘gnugo-animation-string’ docstring

- 2.2.13 | 2006-04-10
  - grid (letters and numbers) visibility can be toggled
  - display bug workaround
  - performance improvements

- 2.2.12 | 2006-04-06
  - bugfix: handle "" as "PASS"

- 2.2.11 | 2005-04-06
  - new mode-line specifier: ‘~m’
  - directory no longer accepted as SGF "file name"

- 2.2.10 | 2005-02-04
  - bugfix: detect "game over" more precisely
  - new command: ‘C-c C-p’ (gnugo-describe-internal-properties)