@@ -12,6 +12,7 @@ Hint: (highlight-phrase "[0-9][.][0-9][.][0-9]+\\|[0-9]+[.][.][0-9]+"
   - bugfixes
     - don't special-case property value type ‘none’
     - handle subtrees on write
+    - display "resign" as "resign" in move history (amazing!)
   - new keybinding for ‘gnugo-undo-one-move’: M-u
   - ‘gnugo-undo-one-move’ can optionally switch colors
   - ‘gnugo-move-history’ returns last two moves w/ RSEL ‘two’
